# campus-login

./: .gitignore  README.md  campus_login.conf.example  campus_login.py  pyproject.toml  security.py  认证流程分析.md
.github/workflows/: ci.yml  publish.yml
src/campus_login_tool/: __init__.py  __main__.py  cli.py  client.py  config.py  logging_utils.py  security.py  watch.py
tests/: test_cli.py  test_client.py  test_compat.py  test_config.py  test_security.py
tests/fixtures/: pageinfo.json  redirect.html
