[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "campus-login"
dynamic = ["version"]
description = "校园网自动登录工具（Eportal 动态公钥型）"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "wangsiyuan" }
]
urls = { Homepage = "https://github.com/RustyPiano/campus-login", Repository = "https://github.com/RustyPiano/campus-login", Issues = "https://github.com/RustyPiano/campus-login/issues" }
dependencies = [
  "requests>=2.31",
]
keywords = ["campus-network", "eportal", "login", "cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet",
  "Topic :: Utilities",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "ruff>=0.8",
  "twine>=5.1",
]

[project.scripts]
campus-login = "campus_login_tool.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.dynamic]
version = { attr = "campus_login_tool.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
